# src/Controller/InternalApi/ApproveCompetitionController.php
@@ -4,6 +4,7 @@ declare(strict_types=1);
 
 namespace SpeedPuzzling\Web\Controller\InternalApi;
 
+use SpeedPuzzling\Web\Controller\FirstTry\FirstTryConflictsController;
 use SpeedPuzzling\Web\Exceptions\CompetitionNotApprovable;
 use SpeedPuzzling\Web\Message\ApproveCompetition;
 use SpeedPuzzling\Web\Query\GetAdminCompetitions;
@@ -30,7 +31,7 @@ final class ApproveCompetitionController extends AbstractController
 
     #[Route(
         path: '/internal-api/competitions/{competitionId}/approve',
-        requirements: ['competitionId' => InternalApiInput::ID_REQUIREMENT],
+        requirements: ['competitionId' => FirstTryConflictsController::ID_REQUIREMENT],
         methods: ['POST'],
     )]
     public function __invoke(string $competitionId): Response
