# src/Controller/InternalApi/UpdateCompetitionController.php
@@ -4,6 +4,7 @@ declare(strict_types=1);
 
 namespace SpeedPuzzling\Web\Controller\InternalApi;
 
+use SpeedPuzzling\Web\Controller\FirstTry\FirstTryConflictsController;
 use SpeedPuzzling\Web\FormData\CompetitionFormData;
 use SpeedPuzzling\Web\Message\EditCompetition;
 use SpeedPuzzling\Web\Query\GetAdminCompetitions;
@@ -33,7 +34,7 @@ final class UpdateCompetitionController extends AbstractController
 
     #[Route(
         path: '/internal-api/competitions/{competitionId}',
-        requirements: ['competitionId' => InternalApiInput::ID_REQUIREMENT],
+        requirements: ['competitionId' => FirstTryConflictsController::ID_REQUIREMENT],
         methods: ['PATCH'],
     )]
     public function __invoke(string $competitionId, Request $request): JsonResponse
